# BeaconScannerJNIMock

./: CMakeLists.txt
src/: mockhcidump.cpp  org_jboss_rhiot_beacon_bluez_HCIDump.cpp  org_jboss_rhiot_beacon_bluez_HCIDump.h  org_jboss_summit2015_beacon_bluez_HCIDump.cpp
test/: CMakeLists.txt  testScanner.cpp
